<resources>
    <string name="app_name">习题册</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>

    <string name="message">信息</string>
    <string name="me">我</string>
    <string name="collect">收藏</string>
    <string name="add">添加</string>
    <string name="contact">通讯录</string>

    <string name="login_txt_inputpwd">输入密码</string>
    <string name="login_txt_inputname">输入账号/电话/邮箱</string>
    <string name="account">账号：</string>
    <string name="password">密码：</string>
    <string name="login_txt_qustion">登陆遇到问题？</string>
    <string name="user_class">班级：</string>
    <string name="user_school">学校：</string>
    <string name="user_phone">电话：</string>
    <string name="user_occupation">职业：</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="register_txt_user">输入电话/字符串</string>
    <string name="register_txt_pwd">由字母、数字、特殊字符等组成</string>
    <string name="register_txt_class">输入您的班级（1403班/九1班）</string>
    <string name="register_txt_school">输入您的学校</string>
    <string name="register_txt_phone">输入您的电话</string>
    <string name="not_empty">除电话外，每一项为必填 ！！</string>
    <string name="login_user_not_empty">账号或密码不能为空</string>

    <string name="connect_to_server">与服务器连接失败，或服务器已关闭/服务器与数据库未连接</string>
    <string name="internet_closed">请先打开网络</string>

    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败，服务器出现故障</string>
    <string name="register_fail">注册失败，服务器出现故障</string>
    <string name="register_success">注册成功</string>
    <string name="register_exist">账号已被注册</string>
    <string name="register_user_err">账号必须是电话号码、或者字母开头的可包含数字和下划线的字符串</string>
    <string name="register_user_pwd_err">密码包含特殊符号、或长度小于6</string>
    <string name="login_account_err">账号或密码错误</string>



</resources>
